deployments/mealie/mealie-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    name: mealie
