deployments/mealie/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mealie-service
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  type: ClusterIP
